--- a/rsyslog.conf
+++ b/rsyslog.conf
@@ -6,7 +6,7 @@ $ModLoad imtcp
 $InputTCPServerRun 514
 template(name="json-template" type="list") {
     constant(value="{")
-    constant(value="\"@timestamp\":\"")     property(name="timereported" dateFormat="rfc3339")
+    #constant(value="\"@timestamp\":\"")     property(name="timereported" dateFormat="rfc3339")
     constant(value="\",\"@version\":\"1")
     constant(value="\",\"message\":\"")     property(name="msg" format="json")
     constant(value="\",\"sysloghost\":\"")  property(name="hostname")
