added socket support for /dev/log
also a comment line for the destination

--- a/rsyslog.conf
+++ b/rsyslog.conf
@@ -1,6 +1,8 @@
 # provides UDP syslog reception
 $ModLoad imudp
 $UDPServerRun 514
+# provides support for local system logging
+$ModLoad imuxsock
 # provides TCP syslog reception
 $ModLoad imtcp
 $InputTCPServerRun 514
@@ -14,4 +16,5 @@ template(name="json-template" type="list") {
     constant(value="\",\"facility\":\"")    property(name="syslogfacility-text")
     constant(value="\"}\n")
 }
-*.* @logstash:5514;json-template
+# sends all lines to defined IP address at UDP port 5000 using the "json-template" format template - use @@ for TCP port
+*.* @private_ip_logstash:5000;json-template
