--- a/rsyslog.conf
+++ b/rsyslog.conf
@@ -16,5 +16,5 @@ template(name="json-template" type="list") {
     constant(value="\",\"facility\":\"")    property(name="syslogfacility-text")
     constant(value="\"}\n")
 }
-# sends all lines to defined IP address at UDP port 5000 using the "json-template" format template - use @@ for TCP port
-*.* @private_ip_logstash:5000;json-template
+# sends all lines to defined IP address at UDP port 5000 using the "json-template" format template - use @ for UDP port and @@ for TCP port
+*.* @@private_ip_logstash:5000;json-template
